<resources>
    <string name="app_name">AndroidMvp</string>
    <string name="login_text_error_mail_empty">Ingresa un correo</string>
    <string name="login_text_error_pass_empty">Ingresa la contraseña</string>
    <string name="login_text_hint_pass">Contraseña</string>
    <string name="login_text_hint_mail">Correo electrónico</string>
    <string name="login_text_btn_login_text">Iniciar</string>
    <string name="login_text_tv_olvide_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="login_text_tv_recuperar">Olvidé mi contraseña</string>
    <string name="login_text_tv_crear_cuenta">Crear una cuenta</string>
    <string name="login_text_tv_registro">Crear una cuenta</string>
    <string name="login_text_tv_title">¡BIENVENIDO!</string>
    <string name="login_text_logo_description">logo Dr. Go</string>
    <string name="login_text_error_conexion">Error de conexión.</string>
    <string name="login_text_error_login">Contraseña o correo invalidos.</string>
    <string name="login_text_progres_bar_text">Iniciando sesión</string>
    <string name="login_text_welcome">Bienvenido</string>
    <string name="login_text_error_mail_invalid">correo electrónico invalido.</string>
    <string name="login_text_cb_remember_password">Recordar contraseña</string>
    <string name="register_title_toolbar">Registro</string>
    <string name="register_title">¡REGISTRATE!</string>
    <string name="register_hint_name">Nombre</string>
    <string name="register_hint_lastname_p">Apellido paterno</string>
    <string name="register_hint_mail">Correo electrónico</string>
    <string name="register_hint_pass">Contraseña</string>
    <string name="register_hint_confirm_password">Confirmar contraseña</string>
    <string name="register_rb_femenino">Femenino</string>
    <string name="register_rb_masculino">Masculino</string>
    <string name="register_terms_aceptar">Acepto terminos y condiciones</string>
    <string name="register_error_name_empty">Ingresa tu nombre(s).</string>
    <string name="register_error_lastname_empty">Ingresa tu apellido.</string>
    <string name="register_error_mail_empty">Ingresa tu correo.</string>
    <string name="register_error_mail_no_valid">Correo invalido.</string>
    <string name="register_error_cedule_empty">Ingresa tu cédula</string>
    <string name="register_error_sex_empty">Ingresa tu sexo.</string>
    <string name="register_error_pass_empty">Ingresa una contraseña</string>
    <string name="register_error_confirme_pass">Las contraseñas no coinciden</string>
    <string name="register_error_terms_no_acept">Debes aceptar términos y condiciones</string>
    <string name="register_characters_mail">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.-_1234567890</string>
    <string name="register_aviso_privacity"><u>Aviso de privacidad</u></string>
    <string name="register_aviso_legal"><u>Aviso legal</u></string>
    <string name="register_terms_conditions">Acepto terminos y condiciones</string>
    <string name="recovery_title_toobar">Recuperación</string>
    <string name="recovery_title">Recuperar contraseña</string>
    <string name="recovery_error_envio">Error de envió, Revise su conexión.</string>
    <string name="recovery_correo_enviado">Se envió correo de recuperación.</string>
    <string name="recovery_correo_no_registrado">Correo electrónico no registrado.</string>
    <string name="recovery_correo_vacio">Ingrese un correo electrónico.</string>
    <string name="recovery_correo_invalido">correo electrónico invalido.</string>
    <string name="terms_btn_Aceptar">Aceptar</string>
    <string name="profile_hint_name">Nombre</string>
    <string name="profile_hint_lastname_p">Apellido paterno</string>
    <string name="profile_hint_lastname_m">Apellido materno</string>
    <string name="profile_hint_cedule">Cédula profesional.</string>
    <string name="profile_hint_telephone">Número de Teléfono</string>
    <string name="profile_hint_birth_date">Fecha de Nacimiento</string>
    <string name="profile_hint_pass">Contraseña</string>
    <string name="profile_hint_confirme_new_pass">Confirmar contraseña</string>
    <string name="profile_hint_new_pass">Nueva contraseña</string>
</resources>