<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_activity"
    android:paddingLeft="42dp"
    android:paddingRight="42dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoo"
        style="@style/login_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/login_margin_top" />

    <TextView
        android:id="@+id/tv_bienvenido"
        android:text="@string/login_text_tv_title"
        style="@style/login_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/logoo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_correo"
        style="@style/login_inputLayout"
        app:errorEnabled="true"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bienvenido"
        app:hintTextAppearance="@style/login_hintTextAppearance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_input_user"
            style="@style/login_editText"
            android:hint="@string/login_text_hint_mail"
            android:inputType="textEmailAddress"
            app:theme="@style/login_editTextControl" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_pas"
        style="@style/login_inputLayout"
        app:hintTextAppearance="@style/login_hintTextAppearance"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_correo"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_input_pass"
            style="@style/login_editText"
            android:hint="@string/login_text_hint_pass"
            android:inputType="textPassword"
            app:theme="@style/login_editTextControl" />

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:id="@+id/login_content_remember_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_pas">
        <CheckBox
            android:id="@+id/chbTerminosCondiciones"
            style="@style/register_checkbox"
            android:buttonTint="@color/colorText"
            />
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:text="@string/login_remember_password"/>

    </LinearLayout>
    <Button
        android:textColor="@android:color/white"
        android:id="@+id/login_btn_iniciar"
        style="@style/login_btn"
        android:text="@string/login_text_btn_login_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBaseline_toBaselineOf="lo"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/login_content_remember_pass"
        />

    <TextView
        android:id="@+id/login_tv_recovery"
        android:text="@string/login_text_tv_recuperar"
        style="@style/login_tv_button"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_iniciar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
         />

    <TextView
        android:id="@+id/login_tv_registrarse"
        android:text="@string/login_text_tv_crear_cuenta"
        android:layout_marginTop="@dimen/login_margin_top"
        style="@style/login_tv_button"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_recovery"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.333"
        />

</android.support.constraint.ConstraintLayout>